# quantum-recoherence

./: .gitignore  CITATION.cff  CLAUDE.md  README.md  pyproject.toml
paper/: paper.tex
results/projector_search/: experiment1_results.npz
scripts/: branches.py  build_all.py  erosion.py  multiscale.py  nesting_table.py  one_reality.py  product_control.py  projector_search.py  projector_search_all.py  projector_search_exp2.py  projectors.py  robustness.py  scaling.py  simulate.py  spatial_multiscale.py
src/recohere/: analysis.py  branches.py  ising_direct.py  spatial_multiscale.py  strasberg.py
tests/: test_analysis.py  test_strasberg.py
